docs: Update database management and backend documentation; clarify OAuth server requirements and user credential management

--- a/development/backend/database/index.mdx
+++ b/development/backend/database/index.mdx
@@ -498,7 +498,7 @@ turso db shell your-database
 
 The environment-based architecture makes it easy to add support for additional databases:
 
-- **PostgreSQL**: Planned for future release
+- **PostgreSQL**: Possible future addition
 - **MySQL**: Possible future addition
 - **Other SQLite-compatible databases**: Can be added with minimal changes
 
