--- a/general/mcp-catalog.mdx
+++ b/general/mcp-catalog.mdx
@@ -142,6 +142,7 @@ Each server in the catalog includes comprehensive metadata:
 - **Tags**: Searchable keywords and labels
 - **Status**: Active, deprecated, or maintenance mode
 - **Sync Status**: Whether server is synced from official registry
+- **OAuth Requirement**: Whether server requires OAuth authorization (see [OAuth-Enabled MCP Servers](/mcp-oauth))
 
 #### Technical Specifications
 - **Language**: Programming language (TypeScript, Python, etc.)
